// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pdfDER — snapshot CIF coché (allumage du sur-ensemble) > génère le DER avec volet AMF + association + référence MIF II 1`] = `
"<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"/>
<title>DER — EcoPatrimoine Conseil</title>
<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet"/>
<style>
  @page{size:A4;margin:14mm 12mm 12mm 12mm;}
  *{box-sizing:border-box;}
  body{font-family:'Lato',-apple-system,BlinkMacSystemFont,sans-serif;font-size:9.5pt;line-height:1.55;color:#0F172A;margin:0;}
  .page{position:relative;min-height:255mm;padding:6mm 0 14mm 0;page-break-after:always;}
  .page:last-of-type{page-break-after:auto;}
  .cover{display:flex;flex-direction:column;justify-content:center;align-items:center;min-height:255mm;text-align:center;background:linear-gradient(135deg,#FDF6E8 0%,#fff 60%);padding:30mm 12mm;}
  .cover-logo{max-height:42mm;max-width:90mm;object-fit:contain;margin-bottom:14mm;}
  .cover-title{font-size:26pt;font-weight:900;letter-spacing:-0.5px;color:#0F172A;margin-bottom:4mm;}
  .cover-subtitle{font-size:13pt;color:#26428B;font-weight:600;margin-bottom:10mm;}
  .cover-bar{width:60mm;height:2px;background:#C4973D;margin:8mm auto;}
  .cover-tagline{font-size:8.5pt;color:#666;line-height:1.7;margin-top:6mm;max-width:120mm;}
  .cover-footer{position:absolute;bottom:14mm;left:0;right:0;text-align:center;font-size:7.5pt;color:#888;}
  .page-header{display:flex;justify-content:space-between;align-items:center;border-bottom:2px solid #C4973D;padding:0 12mm 4mm 12mm;margin-bottom:6mm;}
  .page-header-title{font-size:13pt;font-weight:700;color:#0F172A;}
  .page-header-client{font-size:8pt;color:#888;}
  .page-footer{position:absolute;bottom:6mm;left:12mm;right:12mm;display:flex;justify-content:space-between;font-size:7pt;color:#999;border-top:1px solid #eee;padding-top:3mm;}
  .section{margin:0 12mm 8mm 12mm;}
  .section-title{font-size:10pt;font-weight:700;color:#0F172A;border-bottom:1px solid #C4973D;padding-bottom:3px;margin-bottom:6px;}
  .two-col{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin:0 12mm 8mm 12mm;}
  .legal-block{background:#fff;border:1px solid rgba(227,175,100,0.25);border-left:3px solid #C4973D;border-radius:6px;padding:8px 11px;margin-bottom:8px;font-size:8.5pt;line-height:1.55;color:#333;}
  .legal-title{font-size:9.5pt;font-weight:700;color:#0F172A;margin-bottom:4px;}
  .legal-block ul{margin:4px 0 0 0;padding-left:14px;}
  .legal-block li{margin-bottom:2px;}
  .portee{margin:6mm 12mm 0 12mm;font-size:7pt;color:#92400E;line-height:1.5;background:rgba(146,64,14,0.05);border-left:3px solid rgba(146,64,14,0.35);padding:6px 10px;border-radius:4px;}
  a{color:#26428B;text-decoration:none;}
  @media print{
    .legal-block,.section{page-break-inside:avoid;break-inside:avoid;}
  }</style></head><body><div class="page cover">
    
    <div class="cover-title">Document d'Entrée en Relation</div>
    <div class="cover-subtitle">EcoPatrimoine Conseil</div>
    <div class="cover-bar"></div>
    <div style="font-size:9pt;color:#0F172A;font-weight:600;margin-top:6mm;">Remis à : Pierre Dupont</div>
    <div style="font-size:9pt;color:#666;margin-top:2mm;">25 mai 2026</div>
    <div class="cover-tagline">
      Document remis préalablement à toute mission, conformément aux exigences réglementaires (MIF II + DDA). Il présente notre cabinet, nos statuts, nos conditions d'intervention et vos droits en tant que client.
    </div>
    <div class="cover-footer">EcoPatrimoine Conseil · ORIAS n° 25006907 · Document confidentiel · 25 mai 2026</div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Présentation du cabinet</div><div class="page-header-client">Pierre Dupont · 25 mai 2026</div></div>

    <div class="section">
      <div class="section-title">Identité du cabinet</div>
      <div class="two-col" style="margin:0">
        <div class="legal-block">
          <div class="legal-title">Coordonnées</div>
          <p><strong>EcoPatrimoine Conseil</strong>, EI</p>
          <p style="margin-top:4px;">6 rue Victor Mirabeau 66000 Perpignan</p>
          <p style="margin-top:4px;">Tél. : <strong>—</strong></p>
          <p>Email : <strong>contact@ecopatrimoine-conseil.com</strong></p>
        </div>
        <div class="legal-block">
          <div class="legal-title">Informations légales</div>
          <p>RCS de Perpignan : <strong>—</strong></p>
          <p>SIREN : —</p>
          <p>Capital social : —</p>
          <p>Forme juridique : EI</p>
          <p style="margin-top:4px;">Conseiller : <strong>David Perry</strong></p>
        </div>
      </div>
    </div>

    <div class="section">
      <div class="section-title">Statuts détenus & autorités de tutelle</div>
      <div class="legal-block" style="border-left-color:#26428B">
        <p>EcoPatrimoine Conseil est immatriculé à l'<strong>ORIAS</strong> (Organisme pour le registre unique des intermédiaires en assurance, banque et finance — <a href="https://www.orias.fr">www.orias.fr</a>) sous le n° <strong>25006907</strong>.</p>
        <p style="margin-top:5px;">Statuts détenus :</p><ul><li>Courtier en assurance (COA)</li><li>Conseiller en investissements financiers (CIF)</li></ul>
        <p style="margin-top:6px;">Autorités de tutelle :</p>
        <ul>
          <li><strong>ACPR</strong> — Autorité de Contrôle Prudentiel et de Résolution, 4 place de Budapest, CS 92459, 75436 Paris Cedex 09.</li>
          <li><strong>AMF</strong> — Autorité des Marchés Financiers, 17 place de la Bourse, 75082 Paris Cedex 02.</li>
        </ul>
        <p style="margin-top:5px;">Association professionnelle CIF : ANACOFI-CIF.</p>
      </div>
    </div>

    <div class="two-col">
      <div class="legal-block">
        <div class="legal-title">Volet assurance — liens & rémunération</div>
        <p>Notre cabinet n'est soumis à aucune obligation contractuelle de travailler exclusivement avec une ou plusieurs entreprises d'assurance. Notre analyse porte sur les contrats proposés par nos partenaires sélectionnés.</p>
        <p style="margin-top:4px;color:#666;font-size:7.5pt;">Partenaires sélectionnés : —.</p>
        <p style="margin-top:6px;">Notre cabinet n'entretient aucune participation directe ou indirecte ≥ 10 % dans le capital d'une entreprise d'assurance, ni l'inverse (art. L.521-2 I, Code des assurances).</p>
        <p style="margin-top:6px;">Mode de rémunération :</p>
        <ul>
          <li>☒ Par <strong>commission</strong> versée par l'assureur (incluse dans la prime).</li>
          <li>☐ Par honoraires payés directement par le client.</li>
          <li>☐ Par combinaison commission + honoraires.</li>
        </ul>
      </div>

      <div class="legal-block" style="border-left-color:#26428B">
        <div class="legal-title">Volet CIF — rémunération</div>
        <p>L'activité de Conseiller en investissements financiers (CIF) est régie par le Code monétaire et financier (art. L.541-1 et s.) et par le Règlement général de l'AMF.</p>
        <p style="margin-top:5px;">Mode de rémunération CIF : <em style="color:#92400E">à préciser dans Paramètres</em>.</p>
        <p style="margin-top:6px;"><strong>Lettre de mission CIF à venir</strong> : préalablement à toute prestation de conseil en investissements financiers, une <strong>lettre de mission</strong> dédiée vous sera remise et signée. Elle détaillera l'objet, le périmètre, la durée et les conditions financières de notre intervention.</p>
      </div>
    </div>

    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Document d'entrée en relation</span><span>25 mai 2026</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Vos droits & nos engagements</div><div class="page-header-client">Pierre Dupont · 25 mai 2026</div></div>

    <div class="two-col">
      <div class="legal-block">
        <div class="legal-title">Traitement des réclamations</div>
        <p>Toute réclamation peut être adressée au cabinet :</p>
        <ul>
          <li>Par email : <strong>contact@ecopatrimoine-conseil.com</strong></li>
          <li>Par courrier : 6 rue Victor Mirabeau 66000 Perpignan</li>
        </ul>
        <p style="margin-top:5px;font-size:7.5pt;color:#666">Accusé de réception sous 10 jours ouvrables. Réponse écrite sous 2 mois maximum.</p>
        <p style="margin-top:8px;"><strong>Médiation (art. L.616-1 Code de la consommation)</strong></p>
        <p style="margin-top:3px;">Médiateur compétent : <strong>Médiateur de l'Assurance</strong></p>
        
        <p style="font-size:7.5pt;color:#666"><a href="www.mediation-assurance.org">www.mediation-assurance.org</a></p>
        <p style="margin-top:6px;font-size:7.5pt;color:#666">Pour le volet CIF, le client peut également saisir le <strong>Médiateur de l'AMF</strong> (17 place de la Bourse, 75082 Paris Cedex 02 — <a href="https://www.amf-france.org">www.amf-france.org</a>).</p>
      </div>

      <div class="legal-block">
        <div class="legal-title">Politique de gestion des conflits d'intérêts</div>
        <p>Notre cabinet tient à jour un <strong>registre des conflits d'intérêts</strong>, conformément aux obligations MIF II + DDA. La politique de gestion correspondante est disponible sur simple demande.</p>
        <p style="margin-top:5px;">En cas de conflit d'intérêts détecté préalablement à une recommandation, nous nous engageons à :</p>
        <ul>
          <li>vous en informer par écrit ;</li>
          <li>vous présenter la nature et les sources du conflit ;</li>
          <li>vous laisser libre de poursuivre ou non la prestation.</li>
        </ul>
      </div>
    </div>

    <div class="section">
      <div class="section-title">Protection des données personnelles (RGPD)</div>
      <div class="legal-block">
        <p>Vos données personnelles sont collectées par <strong>EcoPatrimoine Conseil</strong> (responsable de traitement) pour les besoins exclusifs de la mission de conseil et de l'établissement des recommandations.</p>
        <p style="margin-top:5px;">Base légale : exécution du contrat de mission, respect d'obligations légales (LCB-FT, MIF II + DDA, fiscalité). Durée de conservation : 5 ans après la fin de la relation contractuelle (10 ans pour les pièces LCB-FT).</p>
        <p style="margin-top:5px;">Vous disposez d'un droit d'accès, de rectification, d'effacement, de limitation, d'opposition et de portabilité (art. 15 à 22 RGPD) exerçable à l'adresse <strong>contact@ecopatrimoine-conseil.com</strong>. Vous pouvez également introduire une réclamation auprès de la <strong>CNIL</strong> (<a href="https://www.cnil.fr">www.cnil.fr</a>).</p>
        <p style="margin-top:5px;font-size:7.5pt;color:#666">Lutte contre le démarchage téléphonique : pour vous inscrire sur la liste d'opposition, rendez-vous sur <a href="https://www.bloctel.gouv.fr">www.bloctel.gouv.fr</a>.</p>
      </div>
    </div>

    <div class="portee">
      <strong>Portée du document — Ploutos (Ecopatrimoine).</strong> Ce document est généré pour vous aider à respecter vos obligations de conformité. Il ne constitue ni une attestation, ni une garantie d'exhaustivité réglementaire. Le conseiller reste seul responsable de la cohérence des mentions avec sa situation et le référentiel de son association professionnelle.
    </div>

    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Document d'entrée en relation</span><span>25 mai 2026</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Références légales applicables</div><div class="page-header-client">Pierre Dupont · 25 mai 2026</div></div>
    <div class="section">
      <div class="section-title">Calculées d'après les statuts du cabinet</div>
      <div class="legal-block">
        <p style="font-size:8pt;color:#666;margin-bottom:6px;">Le bloc ci-dessous est généré dynamiquement à partir des interrupteurs de statut renseignés dans les Paramètres du cabinet. Toute modification des statuts (ajout du CIF, par exemple) modifie automatiquement la liste affichée.</p>
        <ul style="font-size:8.5pt;line-height:1.7;">
          <li><strong>Code des assurances</strong> · L.511-1 et s. — Conditions d'exercice de l'intermédiation en assurance</li><li><strong>Code des assurances</strong> · L.521-1 et s. — Devoir d'information et de conseil — DDA transposée en droit français</li><li><strong>Code des assurances</strong> · L.522-1 et s. — Règles spécifiques aux contrats d'assurance-vie et unités de compte (IBIP)</li><li><strong>Directive UE 2016/97 (DDA)</strong> · — — Distribution d'assurance</li><li><strong>CMF</strong> · L.541-1 et s. — Conseil en investissements financiers</li><li><strong>RG AMF</strong> · Livre III — Règles de bonne conduite et obligations professionnelles applicables aux CIF</li><li><strong>Directive MIF II</strong> · — — Marchés d'instruments financiers</li>
        </ul>
      </div>
    </div>
    <div class="portee">
      <strong>Portée du document — Ploutos (Ecopatrimoine).</strong> Ce document est généré pour vous aider à respecter vos obligations de conformité. Il ne constitue ni une attestation, ni une garantie d'exhaustivité réglementaire.
    </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Document d'entrée en relation — Références</span><span>25 mai 2026</span></div>
  </div></body></html>"
`;

exports[`pdfDER — snapshot COA seul (fixture par défaut David) > génère le DER avec sous-ensemble assurances (pas de volet AMF/CIF) 1`] = `
"<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"/>
<title>DER — EcoPatrimoine Conseil</title>
<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet"/>
<style>
  @page{size:A4;margin:14mm 12mm 12mm 12mm;}
  *{box-sizing:border-box;}
  body{font-family:'Lato',-apple-system,BlinkMacSystemFont,sans-serif;font-size:9.5pt;line-height:1.55;color:#0F172A;margin:0;}
  .page{position:relative;min-height:255mm;padding:6mm 0 14mm 0;page-break-after:always;}
  .page:last-of-type{page-break-after:auto;}
  .cover{display:flex;flex-direction:column;justify-content:center;align-items:center;min-height:255mm;text-align:center;background:linear-gradient(135deg,#FDF6E8 0%,#fff 60%);padding:30mm 12mm;}
  .cover-logo{max-height:42mm;max-width:90mm;object-fit:contain;margin-bottom:14mm;}
  .cover-title{font-size:26pt;font-weight:900;letter-spacing:-0.5px;color:#0F172A;margin-bottom:4mm;}
  .cover-subtitle{font-size:13pt;color:#26428B;font-weight:600;margin-bottom:10mm;}
  .cover-bar{width:60mm;height:2px;background:#C4973D;margin:8mm auto;}
  .cover-tagline{font-size:8.5pt;color:#666;line-height:1.7;margin-top:6mm;max-width:120mm;}
  .cover-footer{position:absolute;bottom:14mm;left:0;right:0;text-align:center;font-size:7.5pt;color:#888;}
  .page-header{display:flex;justify-content:space-between;align-items:center;border-bottom:2px solid #C4973D;padding:0 12mm 4mm 12mm;margin-bottom:6mm;}
  .page-header-title{font-size:13pt;font-weight:700;color:#0F172A;}
  .page-header-client{font-size:8pt;color:#888;}
  .page-footer{position:absolute;bottom:6mm;left:12mm;right:12mm;display:flex;justify-content:space-between;font-size:7pt;color:#999;border-top:1px solid #eee;padding-top:3mm;}
  .section{margin:0 12mm 8mm 12mm;}
  .section-title{font-size:10pt;font-weight:700;color:#0F172A;border-bottom:1px solid #C4973D;padding-bottom:3px;margin-bottom:6px;}
  .two-col{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin:0 12mm 8mm 12mm;}
  .legal-block{background:#fff;border:1px solid rgba(227,175,100,0.25);border-left:3px solid #C4973D;border-radius:6px;padding:8px 11px;margin-bottom:8px;font-size:8.5pt;line-height:1.55;color:#333;}
  .legal-title{font-size:9.5pt;font-weight:700;color:#0F172A;margin-bottom:4px;}
  .legal-block ul{margin:4px 0 0 0;padding-left:14px;}
  .legal-block li{margin-bottom:2px;}
  .portee{margin:6mm 12mm 0 12mm;font-size:7pt;color:#92400E;line-height:1.5;background:rgba(146,64,14,0.05);border-left:3px solid rgba(146,64,14,0.35);padding:6px 10px;border-radius:4px;}
  a{color:#26428B;text-decoration:none;}
  @media print{
    .legal-block,.section{page-break-inside:avoid;break-inside:avoid;}
  }</style></head><body><div class="page cover">
    
    <div class="cover-title">Document d'Entrée en Relation</div>
    <div class="cover-subtitle">EcoPatrimoine Conseil</div>
    <div class="cover-bar"></div>
    <div style="font-size:9pt;color:#0F172A;font-weight:600;margin-top:6mm;">Remis à : Pierre Dupont</div>
    <div style="font-size:9pt;color:#666;margin-top:2mm;">25 mai 2026</div>
    <div class="cover-tagline">
      Document remis préalablement à toute mission, conformément aux exigences réglementaires (DDA). Il présente notre cabinet, nos statuts, nos conditions d'intervention et vos droits en tant que client.
    </div>
    <div class="cover-footer">EcoPatrimoine Conseil · ORIAS n° 25006907 · Document confidentiel · 25 mai 2026</div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Présentation du cabinet</div><div class="page-header-client">Pierre Dupont · 25 mai 2026</div></div>

    <div class="section">
      <div class="section-title">Identité du cabinet</div>
      <div class="two-col" style="margin:0">
        <div class="legal-block">
          <div class="legal-title">Coordonnées</div>
          <p><strong>EcoPatrimoine Conseil</strong>, EI</p>
          <p style="margin-top:4px;">6 rue Victor Mirabeau 66000 Perpignan</p>
          <p style="margin-top:4px;">Tél. : <strong>—</strong></p>
          <p>Email : <strong>contact@ecopatrimoine-conseil.com</strong></p>
        </div>
        <div class="legal-block">
          <div class="legal-title">Informations légales</div>
          <p>RCS de Perpignan : <strong>—</strong></p>
          <p>SIREN : —</p>
          <p>Capital social : —</p>
          <p>Forme juridique : EI</p>
          <p style="margin-top:4px;">Conseiller : <strong>David Perry</strong></p>
        </div>
      </div>
    </div>

    <div class="section">
      <div class="section-title">Statuts détenus & autorités de tutelle</div>
      <div class="legal-block" style="border-left-color:#26428B">
        <p>EcoPatrimoine Conseil est immatriculé à l'<strong>ORIAS</strong> (Organisme pour le registre unique des intermédiaires en assurance, banque et finance — <a href="https://www.orias.fr">www.orias.fr</a>) sous le n° <strong>25006907</strong>.</p>
        <p style="margin-top:5px;">Statuts détenus :</p><ul><li>Courtier en assurance (COA)</li></ul>
        <p style="margin-top:6px;">Autorités de tutelle :</p>
        <ul>
          <li><strong>ACPR</strong> — Autorité de Contrôle Prudentiel et de Résolution, 4 place de Budapest, CS 92459, 75436 Paris Cedex 09.</li>
          
        </ul>
        
      </div>
    </div>

    <div class="two-col">
      <div class="legal-block">
        <div class="legal-title">Volet assurance — liens & rémunération</div>
        <p>Notre cabinet n'est soumis à aucune obligation contractuelle de travailler exclusivement avec une ou plusieurs entreprises d'assurance. Notre analyse porte sur les contrats proposés par nos partenaires sélectionnés.</p>
        <p style="margin-top:4px;color:#666;font-size:7.5pt;">Partenaires sélectionnés : —.</p>
        <p style="margin-top:6px;">Notre cabinet n'entretient aucune participation directe ou indirecte ≥ 10 % dans le capital d'une entreprise d'assurance, ni l'inverse (art. L.521-2 I, Code des assurances).</p>
        <p style="margin-top:6px;">Mode de rémunération :</p>
        <ul>
          <li>☒ Par <strong>commission</strong> versée par l'assureur (incluse dans la prime).</li>
          <li>☐ Par honoraires payés directement par le client.</li>
          <li>☐ Par combinaison commission + honoraires.</li>
        </ul>
      </div>

      
    </div>

    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Document d'entrée en relation</span><span>25 mai 2026</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Vos droits & nos engagements</div><div class="page-header-client">Pierre Dupont · 25 mai 2026</div></div>

    <div class="two-col">
      <div class="legal-block">
        <div class="legal-title">Traitement des réclamations</div>
        <p>Toute réclamation peut être adressée au cabinet :</p>
        <ul>
          <li>Par email : <strong>contact@ecopatrimoine-conseil.com</strong></li>
          <li>Par courrier : 6 rue Victor Mirabeau 66000 Perpignan</li>
        </ul>
        <p style="margin-top:5px;font-size:7.5pt;color:#666">Accusé de réception sous 10 jours ouvrables. Réponse écrite sous 2 mois maximum.</p>
        <p style="margin-top:8px;"><strong>Médiation (art. L.616-1 Code de la consommation)</strong></p>
        <p style="margin-top:3px;">Médiateur compétent : <strong>Médiateur de l'Assurance</strong></p>
        
        <p style="font-size:7.5pt;color:#666"><a href="www.mediation-assurance.org">www.mediation-assurance.org</a></p>
        
      </div>

      <div class="legal-block">
        <div class="legal-title">Politique de gestion des conflits d'intérêts</div>
        <p>Notre cabinet tient à jour un <strong>registre des conflits d'intérêts</strong>, conformément aux obligations DDA. La politique de gestion correspondante est disponible sur simple demande.</p>
        <p style="margin-top:5px;">En cas de conflit d'intérêts détecté préalablement à une recommandation, nous nous engageons à :</p>
        <ul>
          <li>vous en informer par écrit ;</li>
          <li>vous présenter la nature et les sources du conflit ;</li>
          <li>vous laisser libre de poursuivre ou non la prestation.</li>
        </ul>
      </div>
    </div>

    <div class="section">
      <div class="section-title">Protection des données personnelles (RGPD)</div>
      <div class="legal-block">
        <p>Vos données personnelles sont collectées par <strong>EcoPatrimoine Conseil</strong> (responsable de traitement) pour les besoins exclusifs de la mission de conseil et de l'établissement des recommandations.</p>
        <p style="margin-top:5px;">Base légale : exécution du contrat de mission, respect d'obligations légales (LCB-FT, DDA, fiscalité). Durée de conservation : 5 ans après la fin de la relation contractuelle (10 ans pour les pièces LCB-FT).</p>
        <p style="margin-top:5px;">Vous disposez d'un droit d'accès, de rectification, d'effacement, de limitation, d'opposition et de portabilité (art. 15 à 22 RGPD) exerçable à l'adresse <strong>contact@ecopatrimoine-conseil.com</strong>. Vous pouvez également introduire une réclamation auprès de la <strong>CNIL</strong> (<a href="https://www.cnil.fr">www.cnil.fr</a>).</p>
        <p style="margin-top:5px;font-size:7.5pt;color:#666">Lutte contre le démarchage téléphonique : pour vous inscrire sur la liste d'opposition, rendez-vous sur <a href="https://www.bloctel.gouv.fr">www.bloctel.gouv.fr</a>.</p>
      </div>
    </div>

    <div class="portee">
      <strong>Portée du document — Ploutos (Ecopatrimoine).</strong> Ce document est généré pour vous aider à respecter vos obligations de conformité. Il ne constitue ni une attestation, ni une garantie d'exhaustivité réglementaire. Le conseiller reste seul responsable de la cohérence des mentions avec sa situation et le référentiel de son association professionnelle.
    </div>

    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Document d'entrée en relation</span><span>25 mai 2026</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Références légales applicables</div><div class="page-header-client">Pierre Dupont · 25 mai 2026</div></div>
    <div class="section">
      <div class="section-title">Calculées d'après les statuts du cabinet</div>
      <div class="legal-block">
        <p style="font-size:8pt;color:#666;margin-bottom:6px;">Le bloc ci-dessous est généré dynamiquement à partir des interrupteurs de statut renseignés dans les Paramètres du cabinet. Toute modification des statuts (ajout du CIF, par exemple) modifie automatiquement la liste affichée.</p>
        <ul style="font-size:8.5pt;line-height:1.7;">
          <li><strong>Code des assurances</strong> · L.511-1 et s. — Conditions d'exercice de l'intermédiation en assurance</li><li><strong>Code des assurances</strong> · L.521-1 et s. — Devoir d'information et de conseil — DDA transposée en droit français</li><li><strong>Code des assurances</strong> · L.522-1 et s. — Règles spécifiques aux contrats d'assurance-vie et unités de compte (IBIP)</li><li><strong>Directive UE 2016/97 (DDA)</strong> · — — Distribution d'assurance</li>
        </ul>
      </div>
    </div>
    <div class="portee">
      <strong>Portée du document — Ploutos (Ecopatrimoine).</strong> Ce document est généré pour vous aider à respecter vos obligations de conformité. Il ne constitue ni une attestation, ni une garantie d'exhaustivité réglementaire.
    </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Document d'entrée en relation — Références</span><span>25 mai 2026</span></div>
  </div></body></html>"
`;
